# qtcurl

./: .gitignore  Curl.g4  README.md  a.out  antlr4_driver.py  curl.py  main.py  main_window.py  main_window.ui  parser.py  pyproject.toml  schema.py
parser/: Curl.interp  Curl.tokens  CurlLexer.interp  CurlLexer.py  CurlListener.py  CurlParser.py
requests/: get.curl
